Comments are working. If i add a comment it will reload the page and automaticly reopene the comment section. The css it to be fixed since right now not all the comments seems visible.

--- a/css/comment.css
+++ b/css/comment.css
@@ -44,6 +44,18 @@ em.comment-changer, em.like-changer {
     color: #E91E63;
 }
 
+::-webkit-scrollbar-thumb {
+    background: gray; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background:#323232; 
+
+}
+::-webkit-scrollbar {
+    width: 0.5em;
+}
+
 .comment-text {
     resize: none;
     width: -webkit-fill-available;
@@ -128,11 +140,19 @@ article.people-like {
 @media screen and (max-width: 768px) {
 
     footer {
-        z-index: 1;
-        position: absolute;
-        height: 100%;
+        position: fixed;
+        height: -webkit-fill-available;
         width: -webkit-fill-available;
-        margin-top: 3rem;
+        top: 3rem;
+        left: 0;
+        display: block;
+    }
+
+    .comments, .likes {
+        height: -webkit-fill-available;
+        width: -webkit-fill-available;
+        display: block;
+        overflow: scroll;
     }
 
     .fa-xmark {
